# flupi

./: .ckignore  .gitignore  CLAUDE.md  README.md  flupi-spec.md  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  utils.rs
src-tauri/src/commands/: app_data.rs  collection.rs  environment.rs  execution.rs  execution_runner.rs  functions.rs  git.rs  mod.rs  openapi.rs  project.rs  request.rs  request_tree.rs  scenario.rs
src-tauri/src/commands/tests/: collection.rs  execution.rs  functions.rs  openapi.rs  request.rs  request_tree.rs  scenario.rs
src-tauri/src/models/: app_data.rs  collection.rs  environment.rs  extraction.rs  mod.rs  openapi.rs  pre_request_action.rs  request.rs  scenario.rs  script_function.rs  variable.rs
src-tauri/src/models/tests/: app_data.rs  collection.rs  environment.rs  extraction.rs  openapi.rs  pre_request_action.rs  request.rs  scenario.rs  script_function.rs  variable.rs
src-tauri/src/services/: drift_detection.rs  file_io.rs  git.rs  git_branch.rs  git_staging.rs  http_client.rs  inheritance.rs  mod.rs  openapi_fetch_times.rs  openapi_import.rs  openapi_sources.rs  project.rs  referential_integrity.rs  request_executor.rs  request_path.rs  schema_defaults.rs  template_refs.rs  variable_resolver.rs
src-tauri/src/services/tests/: drift_detection.rs  file_io.rs  git.rs  git_branch.rs  git_staging.rs  http_client.rs  inheritance.rs  openapi_import.rs  openapi_import_body.rs  project.rs  (+3 more)
src-tauri/src/tests/: utils.rs
(+125 files in other folders)
